--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,16 @@
+- title: UPL Ltd.
+  title-url: https://www.upl-ltd.com/
+  date: May 2023 - Jul 2023
+  subtitle: Digital and Analytics Intern
+  tags:
+    - tag: Data Analysis
+    - tag: Data Visualization
+    - tag: Natural Language Processing
+    - tag: Web Development
+    - tag: Python
+    - tag: JavaScript
+  timeline-side: left
+  
 - title: Zoetis Inc.
   title-url: https://www.zoetis.com/
   date: Jun 2022 - Jul 2022
