--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,15 @@
+- title: National Atmospheric Research Laboratory
+  title-url: https://www.narl.gov.in/
+  date: Jun 2023 - Dec 2023
+  subtitle: Deep Learning Intern
+  tags:
+    - tag: Time Series Forecasting
+    - tag: Deep Learning
+    - tag: High-Performance Computing
+    - tag: Python
+    - tag: Bias Correction
+  timeline-side: right
+
 - title: UPL Ltd.
   title-url: https://www.upl-ltd.com/
   date: May 2023 - Jul 2023
