--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Personal Website
 baseurl: ""
 
 username: Arjun Das
-typing_text: Undergraduate Student / Data Science Enthusiast
+typing_text: Data Scientist
 
 email: arjun.das6842@gmail.com
 telegram_username: 
