--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,15 @@
+- title: Wells Fargo
+  title-url: https://www.wellsfargo.com/
+  date: Jul 2024 - present
+  subtitle: Advanced Data and Analytics Program Associate
+  tags:
+    - tag: Marketing Science
+    - tag: Channel Analytics
+    - tag: Risk Analytics
+    - tag: Data Modeling
+    - tag: Customer Science
+  timeline-side: left
+  
 - title: National Atmospheric Research Laboratory
   title-url: https://www.narl.gov.in/
   date: Jun 2023 - Dec 2023
